--- a/producer/package.json
+++ b/producer/package.json
@@ -6,13 +6,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node src/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -V src/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
