--- a/producer/package.json
+++ b/producer/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "build": "npx tsc",
     "start": "node src/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -V src/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon src/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
+    "@types/redis": "^4.0.10",
     "concurrently": "^9.1.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
