--- a/producer/package.json
+++ b/producer/package.json
@@ -14,13 +14,13 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
-    "@types/redis": "^4.0.10",
     "concurrently": "^9.1.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
